Better support for mobile browsers This is a minimum set of features and fixes to make the WebTiles interface playable on mobile browsers. - Added an optional auxiliary input field that can be focused to enable   virtual keybards. - Added a new option tile_web_mobile_input_helper to enable or disable   the input field. - Fix touch zoom and scroll disabled when a popup is shown. - Allow popups to be closed with touch events. - Fix some minor display issues on small screens.
Closes #2221

--- a/crawl-ref/source/webserver/static/style.css
+++ b/crawl-ref/source/webserver/static/style.css
@@ -8,6 +8,7 @@ body {
     background: black;
     color: white;
     font: 16px monospace;
+    text-size-adjust: none;
 }
 
 #login {
@@ -423,4 +424,19 @@ a:hover {
 
 #minimap, #minimap_overlay {
     position: absolute;
+}
+
+#mobile_input {
+    position: relative;
+    height: 0px;
+    bottom: 25px;
+}
+
+#mobile_input input {
+    background: rgba(0, 0, 0, 0.5);
+    color: #A2A2A280;
+    text-align: center;
+    padding: 5px;
+    border: 1px solid #62626280;
+    height: 13px;
 }
